canary/release/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-app
spec:
  selector:
    app: release-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
