canary/release/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "false"
    nginx.ingress.kubernetes.io/canary-by-cookie: ""
spec:
  rules:
    - host: app-ingress.info
      http:
        paths:
        - backend:
            service:
              name: release-app
              port:
                number: 80
          path: /
          pathType: Prefix
